--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^2.10.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-query": "^3.16.0",
     "react-scripts": "^2.0.5"
   },
   "scripts": {
